--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,14 @@ body {
     text-align: center;
 }
 
+.footer .container p {
+   margin-top: 20px;
+}
+
+.footer .container p a {
+   color: #000;
+} 
+
 .navbar-default {
     background-color: #B5B5B5;
     border-color: #969696;
@@ -88,3 +96,4 @@ li {
   flex-direction: column;
   align-items: center;
 }
+
