--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,7 +28,11 @@ body {
 }
 
 .footer .container p a {
-   color: #000;
+   color: #777;
+} 
+
+.footer .container p a:hover {
+   color: #333;
 } 
 
 .navbar-default {
