remove content class

--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -12,7 +12,7 @@
             </form>
         </div>
     </div>
-    <div class="row content">
+    <div class="row">
         <div ng-show="isLoggedIn">
             <div ng-show="hasSearched" style="margin: 0px 0px 20px;">
                 <button ng-click="getPreviousSearch()" class="btn btn-warning">Get Previous Search</button>
