--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,7 +41,7 @@ li {
 .item1 {
   width: 58%;
   /* Modified */
-  height: 10vw;
+  height: 35px;
   background: #4add69;
   margin-bottom: 10px;
 
@@ -49,7 +49,7 @@ li {
 .item2 {
   width: 38%;
   /* Modified */
-  height: 10vw;
+  height: 35px;
   background: #4add69;
   margin-bottom: 10px;
 }
@@ -62,7 +62,7 @@ li {
 
 .item3 {
   width: 100%;
-  height: 10vw;
+  height: 35px;
   background: #d56c6c;
   margin-right: 10px;
 }
