change class assignment

--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -4,7 +4,7 @@
         <h2 style="margin-top: 5px;">Search for Bars Near You and RSVP</h2>
     </div> -->
 
-    <div class="row searches">
+    <div class="row title">
             <div class="item4"> 
                 <h2><i class="fa fa-map-marker"></i><i class="fa fa-cab"></i><i class="fa fa-glass"></i></h2>
                 <h2 style="margin-top: 5px;">Search for Bars Near You and RSVP</h2>
