move prev search button

--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -16,14 +16,19 @@
                 <div class="item2">
                 <button class="btn btn-primary move-right">Search Local Bars</button>
                 </div>
-            </form>
-            <div class="item3"> 
                 <div ng-show="isLoggedIn">
                     <div ng-show="hasSearched" style="margin: 0px 0px 20px;">
                         <button ng-click="getPreviousSearch()" class="btn btn-warning">Get Previous Search</button>
                     </div>
                 </div>
-            </div>
+            </form>
+          <!--  <div class="item3"> 
+                <div ng-show="isLoggedIn">
+                    <div ng-show="hasSearched" style="margin: 0px 0px 20px;">
+                        <button ng-click="getPreviousSearch()" class="btn btn-warning">Get Previous Search</button>
+                    </div>
+                </div>
+            </div> -->
     </div>
 
 
