update styles to .form

--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -14,7 +14,7 @@
                 <input type="text" class="form-control" ng-model="location" id="locationText" placeholder="Enter city or zipcode">
                 </div>
                 <div class="item2">
-                <button class="btn btn-primary move-right">Search Local Bars</button>
+                <button class="btn btn-primary">Search Local Bars</button>
                 </div>
                 <div ng-show="isLoggedIn">
                     <div ng-show="hasSearched" style="margin: 0px 0px 20px;">
