--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -9,7 +9,7 @@
             <h2><i class="fa fa-map-marker"></i><i class="fa fa-cab"></i><i class="fa fa-glass"></i></h2>
             <h2 style="margin-top: 5px;">Search for Bars Near You and RSVP</h2>
         </div>
-        <form ng-submit="getLocalBusinesses();">
+        <form class="form" ng-submit="getLocalBusinesses();">
             <div class="item1">
                 <input type="text" class="form-control" ng-model="location" id="locationText" placeholder="Enter city or zipcode">
             </div>
