--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -9,11 +9,11 @@
             <h2><i class="fa fa-map-marker"></i><i class="fa fa-cab"></i><i class="fa fa-glass"></i></h2>
             <h2 style="margin-top: 5px;">Search for Bars Near You and RSVP</h2>
         </div>
-        <form class="form" ng-submit="getLocalBusinesses();">
+        <form class="form">
             <input type="text" class="form-control" ng-model="location" id="locationText" placeholder="Enter city or zipcode">
         </form>
         <div class="item3">
-            <button class="btn btn-primary">Search Local Bars</button>
+            <button class="btn btn-primary" ng-click="getLocalBusinesses()">Search Local Bars</button>
         </div>
         <div class="item3">
             <div ng-show="isLoggedIn">
