make edits to getLocalBusinesses function

--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -13,7 +13,7 @@
             <input type="text" class="form-control" ng-model="location" id="locationText" placeholder="Enter city or zipcode">
         </form>
         <div class="item3">
-            <button class="btn btn-primary" ng-click="getLocalBusinesses(); triggerChangeWithApply()">Search Local Bars</button>
+            <button class="btn btn-primary" ng-click="getLocalBusinesses()">Search Local Bars</button>
         </div>
         <div class="item3">
             <div ng-show="isLoggedIn">
