--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -40,7 +40,7 @@
                             {{bar.rating}}
                             <br> Price: {{bar.price}} <br>
                         </address>
-                        <div ng-show="isLoggedIn">
+                        <div ng-show="authSearchDone">
                             <button ng-show="bar.users.indexOf(displayName) >= 0" ng-click="addGoing(bar.name)" class="btn btn-success">Remove RSVP</button>
                             <button ng-hide="bar.users.indexOf(displayName) >= 0" ng-click="addGoing(bar.name)" class="btn btn-primary">RSVP</button>
                         </div>
