--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -18,7 +18,7 @@
         <div class="item3">
             <div ng-show="isLoggedIn">
                 <div ng-show="hasSearched" style="margin: 0px 0px 20px;">
-                    <button ng-click="getPreviousSearch()" class="btn btn-warning">Get Previous Search</button>
+                    <button ng-click="getPreviousSearch(); triggerChangeWithApply" class="btn btn-warning">Get Previous Search</button>
                 </div>
             </div>
         </div>
