--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -14,7 +14,7 @@
         </form>
         <div class="item3">
             <button class="btn btn-primary" ng-click="getLocalBusinesses()">Search Local Bars</button>
-            <p class="instructions" ng-hide="authSearchDone">Log in then search or get previous search to RSVP</p>
+            <p class="instructions" ng-hide="authSearchDone">Search without logging in -- login then search or get previous search to RSVP</p>
                                           
         </div>
         <div class="item3">
