--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="row content" ng-show="isLoggedIn authSearchDone">
+    <div class="row content" ng-show="authSearchDone">
         <div class="outer-square" ng-repeat="bar in bars">
             <div class="inner-square">
                 <div class="item">
