--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -42,12 +42,12 @@
                             {{bar.rating}}
                             <br> Price: {{bar.price}} <br>
                         </address>
-                        <div ng-hide="isLoggedIn">
+                        <!--<div ng-hide="isLoggedIn">
                             <div ng-hide="authSearchDone">
                                 <button ng-show="bar.users.indexOf(displayName) >= 0" ng-click="addGoing(bar.name)" class="btn btn-success">Remove RSVP</button>
                                 <button ng-hide="bar.users.indexOf(displayName) >= 0" ng-click="addGoing(bar.name)" class="btn btn-primary">RSVP</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
