--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -8,12 +8,12 @@
             <input type="text" class="form-control" ng-model="location" id="locationText" placeholder="Enter city or zipcode">
         </form>
         <div class="item3">
-            <button class="btn btn-primary" ng-click="getLocalBusinesses()">Search Local Bars</button>
+            <button class="btn btn-primary" ng-click="getLocalBusinesses(); triggerChangeWithApply()">Search Local Bars</button>
         </div>
         <div class="item3">
             <div ng-show="isLoggedIn">
                 <div ng-show="hasSearched" style="margin: 0px 0px 20px;">
-                    <button ng-click="getPreviousSearch(); triggerChangeWithApply" class="btn btn-warning">Get Previous Search</button>
+                    <button ng-click="getPreviousSearch(); triggerChangeWithApply()" class="btn btn-warning">Get Previous Search</button>
                 </div>
             </div>
         </div>
